--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@tanstack/react-query": "^5.8.2",
     "@tanstack/react-query-devtools": "^5.8.2",
+    "antd": "^5.11.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "react": "^18",
