--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
