--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.8.2",
     "@tanstack/react-query-devtools": "^5.8.2",
     "antd": "^5.11.1",
+    "axios": "^1.6.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "react": "^18",
